--- a/config/app_routes.yaml
+++ b/config/app_routes.yaml
@@ -1,4 +1,15 @@
-song:
-  path: /song
+category:
+  path: "/category"
+  controller: App\Controller\CategoryController::index
 
+song:
+  path: "/song"
   controller: App\Controller\SongController::index
+
+favorite:
+  path: "/favorite"
+  controller: App\Controller\FavoriteController::index
+
+  user :
+  path: "/user"
+  controller: App\Controller\UserController::index
