--- a/config/app_routes.yaml
+++ b/config/app_routes.yaml
@@ -13,3 +13,8 @@ favorite:
 user:
   path: "/user"
   controller: App\Controller\UserController::index
+
+get_songs_by_category:
+  path: "/get-songs-by-category"
+  controller: App\Controller\SongController::getSongsByCategory
+  methods: ["POST"]
