on click on a song : we get to a new page which contains this song datas + allows user to listen to it

--- a/config/app_routes.yaml
+++ b/config/app_routes.yaml
@@ -18,3 +18,9 @@ get_songs_by_category:
   path: "/get-songs-by-category"
   controller: App\Controller\SongController::getSongsByCategory
   methods: ["POST"]
+
+player:
+  path: /player/{id}
+  controller: App\Controller\PlayerController::showSong
+  requirements:
+    id: \d+
