--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,26 +4,32 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory: { memory: null }
+    # used to reload user from session & other features (e.g. switch_user)
+    app_user_provider:
+      entity:
+        class: App\Entity\Person
+        property: email
   firewalls:
-    dev:
-      pattern: ^/(_(profiler|wdt)|css|images|js)/
-      security: false
     main:
-      lazy: true
-      provider: users_in_memory
+      form_login:
+        login_path: app_login
+        check_path: app_login
+        username_parameter: _username
+        password_parameter: _password
+        default_target_path: app_home
+        # custom_authenticators: App\Security\LoginFormAuthenticator
 
-      # activate different ways to authenticate
-      # https://symfony.com/doc/current/security.html#the-firewall
+    # activate different ways to authenticate
+    # https://symfony.com/doc/current/security.html#the-firewall
 
-      # https://symfony.com/doc/current/security/impersonating_user.html
-      # switch_user: true
+    # https://symfony.com/doc/current/security/impersonating_user.html
+    # switch_user: true
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # { path: ^/user, roles: ROLE_USER }
+    # { path: ^/admin, roles: ROLE_ADMIN }
+    # { path: ^/person, roles: ROLE_USER }
 
 when@test:
   security:
